src/app/components/app-aside/yoast-ad.scss
.yoast-ad {
    border-color: rgb(166 30 105) !important;
    padding-top: 3rem;
    width: 256px;
    position: sticky !important;
    top: 3rem !important;

    .yoast-ad-logo-square {
        margin-top: -2.6rem;
        z-index: 10;
    }
    .yoast-ad-logo-svg {
        width: 64px;
        height: 64px;
    }

    .yoast-ad-title {
        color: rgb(166 30 105) !important;
        white-space: nowrap;
    }
 
    .yoast-ad-check-icon {
        color: rgb(34 197 94);
        width: 19.5px;
        height: 19.5px;
        flex-shrink: 0;
        margin-right: 0.5rem;
    }

    .yoast-ad-arrow-icon {
        width: 1rem;
        height: 1rem;
        margin-left: -0.25rem;
        flex-shrink: 0;
    }
}

